syntax = "proto3";

option csharp_namespace = "LocationService.Message.DataTransfer.Countries.v1";
import "google/protobuf/empty.proto";
import "DataTransfer/States/v1/StateService.proto";

package Country;

service CountryService {
  rpc GetAll (AllCountriesRequest) returns (CountryCollection);
  rpc Get (CountryIdRequest) returns (CountryData);
  rpc Create (CountryData) returns (CountryData);
  rpc Update (CountryData) returns (CountryData);
  rpc Disable (CountryIdRequest) returns (google.protobuf.Empty);
  rpc Delete (CountryIdRequest) returns (google.protobuf.Empty);
}

message AllCountriesRequest {
  
}

message CountryIdRequest {
  string Id = 1;
}

message CountryCollection {
  repeated CountryData Countries = 1;
}

message CountryData {
  string Id = 1;
  string Code = 2;
  string Name = 3;
  optional string Currency = 4;
  optional string CurrencyName = 5;
  optional string Region = 6;
  optional string SubRegion = 7;  
  State.StateCollection Details = 8;
}